--- a/.github/workflows/build-gdock.yml
+++ b/.github/workflows/build-gdock.yml
@@ -51,6 +51,7 @@ jobs:
     - name: Clone source code
       run: |
         git clone https://github.com/coolsnowwolf/lede lede
+        git clone https://github.com/georip/luci-theme-darkmatter lede/package
 
     - name: Update feeds
       run: cd lede && ./scripts/feeds update -a
@@ -60,7 +61,7 @@ jobs:
 
     - name: Load custom configuration
       run: |
-        cp -f gdockfull128.config ./lede/.config
+        cp -f gdock128custom.config ./lede/.config
         chmod +x diy.sh
         cd lede
         ../diy.sh
